Fix a lot of problem in DB!
