# galaapp/models.py
@@ -7,7 +7,7 @@ db = SQLAlchemy(app)
 inventory = db.Table(
     "inventory",
     db.Column("counter_id", db.Integer, db.ForeignKey("counter.id")),
-    db.Column("product_id", db.Integer, db.ForeignKey("product.id")),
+    db.Column("product_code", db.String(16), db.ForeignKey("product.code")),
 )
 
 shopping_cart = db.Table(
@@ -18,8 +18,7 @@ shopping_cart = db.Table(
 
 
 class Product(db.Model):
-    id = db.Column(db.Integer, primary_key=True)
-    code = db.Column(db.String(16), nullable=False)
+    code = db.Column(db.String(16), primary_key=True)
     name = db.Column(db.String(64), nullable=False)
     price = db.Column(db.Float, nullable=False)
     happy_hours = db.relationship("Happy_Hour", backref="product", lazy=True)
@@ -32,7 +31,7 @@ class Product(db.Model):
 
 class Product_quantity(db.Model):
     id = db.Column(db.Integer, primary_key=True)
-    product_id = db.Column(db.Integer, db.ForeignKey("product.id"))
+    product_code = db.Column(db.String(16), db.ForeignKey("product.code"))
     quantity = db.Column(db.Integer, nullable=False)
     shopping_carts = db.relationship(
         "Transaction",
@@ -46,25 +45,29 @@ class Happy_Hour(db.Model):
     start = db.Column(db.DateTime, nullable=False)
     end = db.Column(db.DateTime, nullable=False)
     price = db.Column(db.Integer, nullable=False)
-    product_id = db.Column(db.Integer, db.ForeignKey("product.id"), nullable=False)
+    product_code = db.Column(
+        db.String(16), db.ForeignKey("product.code"), nullable=False
+    )
 
 
 class Counter(db.Model):
     id = db.Column(db.Integer, primary_key=True)
+    transactions = db.relationship("Transaction", backref="counter", lazy=True)
 
 
 class User(db.Model):
-    id = db.Column(db.Integer, primary_key=True)
-    UID = db.Column(db.String(32), nullable=False)
+    UID = db.Column(db.String(32), primary_key=True)
     money = db.Column(db.Integer, nullable=False)
     transactions = db.relationship("Transaction", backref="user", lazy=True)
 
 
 class Transaction(db.Model):
     id = db.Column(db.Integer, primary_key=True)
-    user_id = db.Column(db.Integer, db.ForeignKey("user.id"), nullable=False)
-    counter_id = db.Column(db.String(32), nullable=False)
+    user_UID = db.Column(db.String(32), db.ForeignKey("user.UID"), nullable=False)
+    counter_id = db.Column(db.Integer, db.ForeignKey("counter.id"), nullable=False)
+    computer_MAC = db.Column(db.String(32), nullable=False)
     amount = db.Column(db.Integer)
+    time = db.Column(db.DateTime, nullable=False)
 
 
 db.create_all()
